tests/error/op_int.mml








  1 +
3 && true
